Fix jumpy input on ios (#566)

--- a/src/frame/stylesheets/main.less
+++ b/src/frame/stylesheets/main.less
@@ -42,10 +42,11 @@
 
 html, body {
     overflow: hidden;
-    max-width: 100%;
-    width: 100%;
-    max-height: 100%;
     height: 100%;
+    width: 100%;
+    position: relative;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-size-adjust: 100%;
 }
 
 #sk-container {
